syntax = "proto3";
package xingyu.lu.individual.rpc.grpc.facade;
import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package = "xingyu.lu.individual.rpc.grpc.facade.builder";
option java_outer_classname = "GrpcXModule";

// service definition.
// 定义通用Grpc调用服务
service XService {
  rpc GrpcXCall(GrpcXRequest) returns (GrpcXReply){}
}
// The request message
// 定义通用请求结构
// 1 2 3 4 代表参数顺序
// google.protobuf.Any bizContent
// 泛型请求数据
message GrpcXRequest {
  string appId = 1;
  string method = 2;
  string sign = 3;
  string version = 4;
  //  string bizContent = 5;
  google.protobuf.Any bizContent = 5;
}
// The response message
// 定义通用返回结构
// 1 2 3 4 代表参数顺序
// google.protobuf.Any bizData
// 泛型返回数据
message GrpcXReply {
  bool isSuccess = 1;
  string errorCode = 2;
  string errorMessage = 3;
  //  string bizData = 4;
  google.protobuf.Any  bizData = 4;
}